@@ -1,3 +1,8 @@
+2006-08-21
+	* Nathan Neulinger <nneul@umr.edu>: fix incompatabilities with
+	  unix domain socket support and the UDP code and clean up stale 
+	  sockets
+
 2006-08-20
 	* Nathan Neulinger <nneul@umr.edu>: unix domain socket support
 
